--- a/views/user/userProfile.ejs
+++ b/views/user/userProfile.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/assets/css/userProfile.css">
 </head>
 <body>
-
+    <button class="dash" onclick="window.location.href='/'"> Home</button>
 <div class="container emp-profile">
     <form method="post">
         <!-- Profile Header -->
